[gd_scene load_steps=8 format=3 uid="uid://cfhqtytwiylgd"]

[ext_resource type="Script" uid="uid://d1okw6rhai03w" path="res://slider.gd" id="1_gkr5f"]
[ext_resource type="Texture2D" uid="uid://l807jx4o8ujx" path="res://images (2).jpg" id="2_gbne7"]
[ext_resource type="Texture2D" uid="uid://p5mk437ba68v" path="res://output-onlinejpgtools (1).png" id="3_gvds2"]
[ext_resource type="Texture2D" uid="uid://s0cxc7wevgq0" path="res://12445922.jpg.l_thumbnail-removebg-preview.png" id="4_ddalc"]
[ext_resource type="Texture2D" uid="uid://bclki6sshnrti" path="res://combination_wrench_not_size__82217.1633978636_678x700.webp" id="5_buhp3"]
[ext_resource type="Texture2D" uid="uid://70xehfnjjrlq" path="res://abstract-futuristic-circuit-board-on-dark-blue-background-digital-technology-concept-vector.jpg" id="6_j2lly"]
[ext_resource type="Texture2D" uid="uid://djp8uva8aepcs" path="res://3d-square-metal-frame-on-a-transparent-background-png.png" id="7_ddalc"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_gkr5f")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576.0001, 324)
scale = Vector2(4.447877, 3.3402066)
texture = ExtResource("2_gbne7")
flip_v = true

[node name="Images(2)" type="Sprite2D" parent="."]
visible = false
position = Vector2(552, 352)
scale = Vector2(4.6338706, 4.4104896)
texture = ExtResource("2_gbne7")
flip_v = true

[node name="AbstractFuturisticCircuitBoardOnDarkBlueBackgroundDigitalTechnologyConceptVector" type="Sprite2D" parent="."]
light_mask = 524289
position = Vector2(584.00006, 312.00003)
scale = Vector2(0.34607068, 0.47346944)
texture = ExtResource("6_j2lly")

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-168, -56, 1272, -56, 1264, 752, -208, 760)

[node name="Polygon2D2" type="Polygon2D" parent="."]
visible = false
position = Vector2(-23.999998, 46.7343)
scale = Vector2(0.2658583, 0.8181772)
color = Color(0.7539839, 0.75398386, 0.75398386, 1)
polygon = PackedVector2Array(-168, -56, 1271.9999, -57.119995, 1268.0181, 346.1941, 1264, 752, -208, 760)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="Pilot" type="VSlider" parent="Control"]
layout_mode = 0
offset_left = 56.0
offset_top = 352.0
offset_right = 72.0
offset_bottom = 634.0
max_value = 6.0

[node name="Science" type="VSlider" parent="Control"]
layout_mode = 0
offset_left = 136.0
offset_top = 352.0
offset_right = 152.0
offset_bottom = 634.0
max_value = 6.0
value = 1.0

[node name="Shooter" type="VSlider" parent="Control"]
layout_mode = 0
offset_left = 216.0
offset_top = 352.0
offset_right = 232.0
offset_bottom = 634.0
max_value = 6.0
value = 1.0

[node name="Power_Supply" type="TextEdit" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 2.6
anchor_top = 7.0
anchor_right = 4.0
anchor_bottom = 7.8
offset_right = 8.0
offset_bottom = 8.0
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 3.1250002
anchor_bottom = 0.4
offset_left = 22.000061
offset_top = 18.0
offset_right = 105.00005
offset_bottom = 210.0
scale = Vector2(0.6, 0.6)
action_mode = 0
icon = ExtResource("4_ddalc")
flat = true

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 56.0
offset_top = 328.0
offset_right = 240.0
offset_bottom = 376.0
text = "P                  S                W"

[node name="Overcharge" type="Button" parent="Control"]
layout_mode = 0
offset_left = 936.0
offset_top = 272.0
offset_right = 1108.0
offset_bottom = 392.0
text = "OVERCHARGE
"

[node name="Special Thing" type="Button" parent="Control"]
layout_mode = 0
offset_left = 936.0
offset_top = 488.0
offset_right = 1108.0
offset_bottom = 608.0
theme_override_font_sizes/font_size = 30
text = "Synergise"

[node name="Button4" type="Button" parent="Control"]
layout_mode = 0
offset_left = 936.0
offset_top = 40.0
offset_right = 1108.0
offset_bottom = 159.0
text = "Minigame"

[node name="Charge" type="Label" parent="."]
offset_left = 259.5
offset_top = 80.0
offset_right = 299.5
offset_bottom = 135.0
theme_override_colors/font_color = Color(0.4497835, 0.6453864, 1, 1)
theme_override_colors/font_outline_color = Color(0.2292062, 0.49821734, 0.999991, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 40

[node name="OutputOnlinejpgtools(1)" type="Sprite2D" parent="."]
position = Vector2(217.75, 107.125)
scale = Vector2(0.38269225, 0.3621134)
texture = ExtResource("3_gvds2")

[node name="CombinationWrenchNotSize82217_1633978636678x700" type="Sprite2D" parent="."]
position = Vector2(-71.999985, 360)
scale = Vector2(0.54719764, 0.6028572)
texture = ExtResource("5_buhp3")
flip_h = true

[node name="3dSquareMetalFrameOnATransparentBackgroundPng" type="Sprite2D" parent="."]
position = Vector2(588, 322.5)
scale = Vector2(2.08, 1.9800001)
texture = ExtResource("7_ddalc")

[connection signal="value_changed" from="Control/Pilot" to="." method="_on_pilot_value_changed"]
[connection signal="value_changed" from="Control/Science" to="." method="_on_science_value_changed"]
[connection signal="value_changed" from="Control/Shooter" to="." method="_on_shooter_value_changed"]
[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/Overcharge" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Control/Special Thing" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Control/Button4" to="." method="_on_button_4_pressed"]
